# mpi-skel

./: AUTHORS  FrameworkAnalysisReport.md  FrameworkDevelopmentEnvironment.md  FrameworkFeatures.md  FrameworkUsage.md  ImplementationDetails.md  Makefile.am  NEWS  ProjectHome.md  README  configure.ac  test.sh
doc/: Makefile.am  doc.tex  proposal-master.tex  proposal.tex  report-master.tex  report.bib  report.tex  request-espec.tex  request-master.tex  request.tex
doc/sspr/: Makefile.txt  sspr - Copy.tex  sspr.cu
inc/: arg.h  args.h  log.h  mpi.h  mpiskel.h  pipe.h  pipeline.h  utils.h
lib/: Makefile.am  arg.c  args.c  log.c  mpi.c  mpiskel.c  pipe.c  pipeline.c  utils.c
src/: heat.c  matrix.c  queens.c
t/: 001_sparse.sh  004_checkpatch.sh  006_matrix.sh  007_heat.sh
tools/: generate-report.pl
trunk/: ChangeLog  configure.ac
trunk/doc/: doc.tex  proposal-master.tex  proposal.tex  report-master.tex  report.bib  report.tex  request.tex
trunk/doc/sspr/: sspr.bib  sspr.tex
trunk/inc/: arg.h  args.h  log.h  mpi.h  mpiskel.h  pipe.h  utils.h
trunk/lib/: Makefile.am  arg.c  args.c  log.c  mpi.c  mpiskel.c  pipe.c  pipeline.c  utils.c
trunk/src/: Makefile.am  heat.c  matrix.c  queens.c
trunk/t/: 001_sparse.sh  002_autoscan.sh  004_checkpatch.sh  005_queens.sh  006_matrix.sh  Makefile.am
wiki/: FrameworkAnalysisReport.wiki  FrameworkDevelopmentEnvironment.wiki  FrameworkFeatures.wiki  FrameworkUsage.wiki  ImplementationDetails.wiki  PageName.wiki
