#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])

AC_INIT([mpi-skel], [0.1], [more.andres@gmail.com])
AC_CONFIG_SRCDIR([src/mpi-skel.c])
AC_CONFIG_HEADERS([inc/config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 doc/Makefile
                 inc/Makefile
                 src/Makefile
                 t/Makefile])
AC_OUTPUT
